--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
 private_key_file = ~/.ssh/id_ed25519
-inventory = ~/Documents/auto-deploy/inventory.yaml
-roles_path = ~/Documents/auto-deploy/roles
+inventory = ~/Documents/AIDC/auto-opration/inventory.yaml
+# roles_path = ~/Documents/AIDC/auto-opration/roles
